...
                if (snapshot.hasData) {
                  final List<Product> products = snapshot.data!;
                  return Expanded(
                    child: Padding(
                      padding: const EdgeInsets.all(16.0),
                      child: GridView.builder(
                        key: const Key('products_list'),
                        gridDelegate:
                            const SliverGridDelegateWithMaxCrossAxisExtent(
                          maxCrossAxisExtent: 200.0,
                          mainAxisExtent: 275.0,
                          childAspectRatio: 1.5,
                          mainAxisSpacing: 20.0,
...
